--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup asdf
+        uses: asdf-vm/actions/install@v1
+        with:
+          tool_versions: |
+            python 3.10.1
+
       - name: Show environment
         run: set
 
