--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,12 @@ name: CI
 on:
   push:
   pull_request:
+    types:
+      - labeled
+      - unlabeled
+      - opened
+      - converted_to_draft
+      - ready_for_review
   release:
     types:
       - published
