--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Failure
-        run: test -f foobarbaz
+        run: |
+          test -f foobarbaz
+          true
 
       - name: Setup asdf
         uses: asdf-vm/actions/install@v1
