--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Changelog
         id: changelog
-        uses: scottbrenner/generate-changelog-action@master
+        uses: heinrichreimer/github-changelog-generator-action@v2.3
 
       - name: Create Release
         uses: ncipollo/release-action@v1
