--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Show last tag
+        run: git describe --tags --abbrev=0
+
       - name: Show environment
         run: set
 
