--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Show last tag
-        run: git describe --tags --abbrev=0
+        uses: actions-ecosystem/action-get-latest-tag@v1
 
       - name: Show environment
         run: set
