--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Show environment
         run: set
 
-      - name: Show event
+      - name: Show github context
         run: |
-          jq . << 'END'
-          ${{ toJson(github.event) }}
+          jq -C . << 'END'
+          ${{ toJson(github) }}
           END
