--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Show last tag
+      - name: Get last tag
+        id: last_tag
         uses: actions-ecosystem/action-get-latest-tag@v1
+
+      - name: Show last tag
+        run: echo ${{ steps.last_tag.outputs.tag }}
 
       - name: Show environment
         run: set
