--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Get last tag
         id: last_tag
-        run: tag=$(git describe --tags --abbrev=0) >> $GITHUB_OUTPUT
+        uses: actions-ecosystem/action-get-latest-tag@v1
 
       - name: Changelog
         id: changelog
