--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get last tag
-        id: last_tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
+      - name: Get previous tag
+        id: previoustag
+        uses: WyriHaximus/github-action-get-previous-tag@v1@v1
 
-      - name: Show last tag
-        run: echo ${{ steps.last_tag.outputs.tag }}
+      - name: Show previous tag
+        run: echo ${{ steps.previoustag.outputs.tag }}
 
       - name: Show environment
         run: set
