--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Get previous tag
         id: previoustag
-        uses: WyriHaximus/github-action-get-previous-tag@v1@v1
+        uses: WyriHaximus/github-action-get-previous-tag@v1
 
       - name: Show previous tag
         run: echo ${{ steps.previoustag.outputs.tag }}
