--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get last tag
-        id: last_tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
+      - name: Get previous tag
+        id: tags
+        uses: JinoArch/get-latest-tag@latest
 
       - name: Changelog
         id: changelog
@@ -29,7 +29,7 @@ jobs:
           issuesWoLabels: true
           pullRequests: true
           prWoLabels: true
-          sinceTag: ${{ steps.last_tag.outputs.tag }}
+          sinceTag: ${{ steps.tags.outputs.previousTag }}
           token: ${{ secrets.GITHUB_TOKEN }}
           stripGeneratorNotice: true
 
