--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get last tag
-        id: last_tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
+      - name: Get latest and previous tag
+        id: tags
+        uses: JinoArch/get-latest-tag@latest
 
-      - name: Show last tag
-        run: echo ${{ steps.last_tag.outputs.tag }}
+      - name: Show latest tag
+        run: echo ${{ steps.tags.outputs.latestTag }}
+
+      - name: Show previous tag
+        run: echo ${{ steps.tags.outputs.previousTag }}
 
       - name: Show environment
         run: set
