--- a/.github/workflows/remove-labels.yaml
+++ b/.github/workflows/remove-labels.yaml
@@ -4,6 +4,7 @@ on:
   pull_request:
     types:
       - closed
+      - converted_to_draft
   pull_request_review:
     types:
       - submitted
@@ -22,8 +23,8 @@ jobs:
           labels: ready for review, staging, testing
           type: remove
 
-      - name: Remove on PR reviewed
-        if: github.event_name == 'pull_request_review'
+      - name: Remove on PR reviewed or converted to draft
+        if: github.event_name == 'pull_request_review' || (github.event_name == 'pull_request' && github.event.action == 'converted_to_draft')
         uses: buildsville/add-remove-label@v2.0.0
         with:
           token: ${{secrets.BUILD_BOT_TOKEN}}
