--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -15,6 +15,6 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.action == 'ready_for_review'
         uses: buildsville/add-remove-label@v2.0.0
         with:
-          token: ${{secrets.BUILD_BOT_TOKEN}}
+          token: ${{secrets.GITHUB_TOKEN}}
           labels: ready for review
           type: remove
