--- a/.github/workflows/remove-labels.yaml
+++ b/.github/workflows/remove-labels.yaml
@@ -19,7 +19,7 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.action == 'closed'
         uses: buildsville/add-remove-label@v2.0.0
         with:
-          token: ${{secrets.BUILD_BOT_TOKEN}}
+          token: ${{secrets.GITHUB_TOKEN}}
           labels: ready for review, staging, testing
           type: remove
 
@@ -27,6 +27,6 @@ jobs:
         if: github.event_name == 'pull_request_review' || (github.event_name == 'pull_request' && github.event.action == 'converted_to_draft')
         uses: buildsville/add-remove-label@v2.0.0
         with:
-          token: ${{secrets.BUILD_BOT_TOKEN}}
+          token: ${{secrets.GITHUB_TOKEN}}
           labels: ready for review
           type: remove
