--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get previous tag
-        id: tags
-        uses: JinoArch/get-latest-tag@latest
+        id: previous-release
+        uses: sammcoe/get-previous-release-action@v1
 
       - name: Show current tag
         run: git describe --tags --abbrev=0
@@ -32,7 +32,7 @@ jobs:
           issuesWoLabels: true
           pullRequests: true
           prWoLabels: true
-          sinceTag: ${{ steps.tags.outputs.previousTag }}
+          sinceTag: ${{ steps.previous-release.outputs.release }}
           token: ${{ secrets.GITHUB_TOKEN }}
           stripGeneratorNotice: true
 
