--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Get previous release
         id: previous-release
         run: tag=$(gh release list -L 1 | cut -f3) >> $GITHUB_OUTPUT
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Changelog
         id: changelog
