--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - release
   workflow_dispatch:
 
 jobs:
@@ -19,6 +20,7 @@ jobs:
         id: tag-version
         uses: mathieudutour/github-tag-action@v6.1
         with:
+          pre_release_branches: release
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dry_run: true
 
