--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,10 @@ jobs:
           esac
 
       - name: Create new tag
-        uses: mathieudutour/github-tag-action@v6.1
+        uses: rickstaa/action-create-tag@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.tags.outputs.new }}
-          tag_prefix: ""
+          tag: ${{ steps.tags.outputs.new }}
 
       - name: Changelog
         id: changelog
