--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Calculate new tag
         id: tags
         run: |
-          git fetch --tags --force --quiet
-          last=$(git describe --always --tags --abbrev=0)
+          last=$(git describe --tags --abbrev=0)
           echo tag=$last >> $GITHUB_OUTPUT
           case "$GITHUB_REF_NAME" in
             main) echo new=v$(npx semver $last --increment patch) >> $GITHUB_OUTPUT;;
