--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -15,7 +15,8 @@ jobs:
 
     steps:
       - name: Add on PR WIP
-        if: ((github.event.action == 'opened' || github.event.action == 'reopened') && github.event.pull_request.draft)
+        if:
+          ((github.event.action == 'opened' || github.event.action == 'reopened') && github.event.pull_request.draft)
           || github.event.action == 'converted_to_draft'
         uses: buildsville/add-remove-label@v2.0.0
         with:
@@ -24,7 +25,8 @@ jobs:
           type: add
 
       - name: Add on PR ready for review
-        if: ((github.event.action == 'opened' || github.event.action == 'reopened') && !github.event.pull_request.draft)
+        if:
+          ((github.event.action == 'opened' || github.event.action == 'reopened') && !github.event.pull_request.draft)
           || github.event.action == 'ready_for_review'
         uses: buildsville/add-remove-label@v2.0.0
         with:
