--- a/.github/workflows/labels.yaml
+++ b/.github/workflows/labels.yaml
@@ -1,9 +1,11 @@
-name: Remove labels
+name: Manage labels
 
 on:
   pull_request:
     types:
       - closed
+      - opened
+      - reopened
       - converted_to_draft
       - ready_for_review
   pull_request_review:
@@ -11,11 +13,31 @@ on:
       - submitted
 
 jobs:
-  remove-labels:
-    name: Remove labels
+  add-labels:
+    name: Manage labels
     runs-on: ubuntu-latest
 
     steps:
+      - name: Add on PR WIP
+        if: (github.event_name == 'pull_request' &&
+          ((github.event.action == 'opened' || github.event.action == 'reopened') && github.event.pull_request.draft)) ||
+          github.event.action == 'converted_to_draft'
+        uses: buildsville/add-remove-label@v2.0.0
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          labels: WIP
+          type: add
+
+      - name: Add on PR ready for review
+        if: (github.event_name == 'pull_request' &&
+          ((github.event.action == 'opened' || github.event.action == 'reopened') && !github.event.pull_request.draft)) ||
+          github.event.action == 'ready_for_review'
+        uses: buildsville/add-remove-label@v2.0.0
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          labels: ready for review
+          type: add
+
       - name: Remove on PR closed
         if: github.event_name == 'pull_request' && github.event.action == 'closed'
         uses: buildsville/add-remove-label@v2.0.0
