--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Show Docker config
+        run: cat /etc/docker/daemon.json
+
       - name: Get latest and previous tag
         id: tags
         uses: JinoArch/get-latest-tag@latest
