--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Show Docker config
-        run: cat /etc/docker/daemon.json
+      - name: Enable Docker experimental
+        run: |
+          yq -i '.experimental=true' /etc/docker/daemon.json
+          systemctl restart docker.service
 
       - name: Get latest and previous tag
         id: tags
