--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Enable Docker experimental
         run: |
-          sudo yq -i '.experimental=true' /etc/docker/daemon.json
+          sudo yq '.experimental=true' -i -o json /etc/docker/daemon.json
           sudo systemctl restart docker.service || sudo journalctl -u docker.service
 
       - name: Get latest and previous tag
