perltidy and perlcritic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment: ${{ github.event.inputs.environment }}
 
     steps:
@@ -37,21 +37,26 @@ jobs:
           jq -C . << 'END'
           ${{ toJson(github) }}
           END
-          
+
       - name: Show secrets context
         run: |
           jq -C . << 'END'
           ${{ toJson(secrets) }}
           END
-          
+
       - name: Show env context
         run: |
           jq -C . << 'END'
           ${{ toJson(env) }}
           END
-          
+
       - name: Show vars context
         run: |
           jq -C . << 'END'
           ${{ toJson(vars) }}
           END
+
+      - run: brew install cpanminus perltidy
+      - run: cpanm -n Perl::Critic
+      - run: perltidy --version
+      - run: perlcritic --version
