--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,22 +1,27 @@
 version: 0.1
 cli:
-  version: 1.1.0
+  version: 1.11.1
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.6
+      ref: v0.0.21
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
-    - gitleaks@8.15.1
-    - markdownlint@0.32.2
+    - checkov@2.3.309
+    - trivy@0.42.1
+    - trufflehog@3.42.0
+    - yamllint@1.32.0
+    - gitleaks@8.17.0
+    - markdownlint@0.35.0
     - git-diff-check
-    - prettier@2.8.0
-    - actionlint@1.6.22
+    - prettier@2.8.8
+    - actionlint@1.6.25
 runtimes:
   enabled:
-    - go@1.18.3
-    - node@16.14.2
+    - python@3.10.8
+    - go@1.19.5
+    - node@18.12.1
 actions:
   enabled:
     - trunk-announce
