Remove empty directory creation and list android lib
Removed the creation of an empty directory and added a command to list contents of the android library.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
           END
 
       - run: |
-          mkdir empty
           sudo find /usr/share/dotnet -delete
 
       - run: |
+          ls -l /usr/local/lib/android
           sudo find /usr/local/lib/android -delete
