Update paths in CI workflow for dotnet and android

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,9 @@ jobs:
           END
 
       - run: |
+          ls -l /usr/share/dotnet
           sudo find /usr/share/dotnet -delete
 
       - run: |
-          ls -l /usr/local/lib/android
+          ls -l /usr/local/lib/android/sdk
           sudo find /usr/local/lib/android -delete
