--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - labeled
       - unlabeled
       - opened
+      - closed
       - converted_to_draft
       - ready_for_review
   release:
